--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -8,7 +8,8 @@
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
-    "install-my-packages": "npm install axios@1.6.8 notistack@3.0.1 react-icons@5.0.1 react-router-dom@6.22.3"
+    "install-my-packages": "npm install axios@1.6.8 notistack@3.0.1 react-icons@5.0.1 react-router-dom@6.22.3",
+    "test": "mocha --exit tests/*.test.js"
   },
   "dependencies": {
     "axios": "^1.6.8",
