--- a/Backend/package.json
+++ b/Backend/package.json
@@ -17,7 +17,8 @@
     "cors": "^2.8.5",
     "express": "^4.19.2",
     "mongodb": "^6.5.0",
-    "mongoose": "^8.2.4",
+    "mongoose": "^8.3.1",
+    "mongoose-validator": "^2.1.0",
     "nodemon": "^3.1.0",
     "validator": "^13.11.0"
   },
