--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -17,6 +17,8 @@
     "axios": "^1.6.8",
     "bootstrap": "^5.3.3",
     "notistack": "^3.0.1",
+    "primeicons": "^7.0.0",
+    "primereact": "^10.6.5",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.2",
     "react-dom": "^18.2.0",
