--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -12,13 +12,20 @@
     "test": "mocha --exit tests/*.test.js"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.5.2",
+    "@fortawesome/free-solid-svg-icons": "^6.5.2",
+    "@fortawesome/react-fontawesome": "^0.2.2",
     "axios": "^1.6.8",
     "bootstrap": "^5.3.3",
+    "date-fns": "^3.6.0",
     "formik": "^2.4.5",
     "jsonwebtoken": "^9.0.2",
+    "moment": "^2.30.1",
+    "moment-locale-fr": "^1.0.0",
     "notistack": "^3.0.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "react-big-calendar": "^1.12.2",
+    "react-dom": "^18.3.1",
     "react-icons": "^5.0.1",
     "react-router-dom": "^6.22.3",
     "yup": "^1.4.0"
