--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -16,6 +16,8 @@
     "@material-tailwind/react": "^2.1.9",
     "axios": "^1.6.8",
     "bootstrap": "^5.3.3",
+    "miragejs": "^0.1.48",
+    "nanoid": "^5.0.7",
     "notistack": "^3.0.1",
     "primeicons": "^7.0.0",
     "primereact": "^10.6.5",
