--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -25,6 +25,7 @@
     "notistack": "^3.0.1",
     "react": "^18.2.0",
     "react-big-calendar": "^1.12.2",
+    "react-bootstrap": "^2.10.2",
     "react-dom": "^18.3.1",
     "react-icons": "^5.0.1",
     "react-router-dom": "^6.22.3",
