--- a/Backend/package.json
+++ b/Backend/package.json
@@ -7,16 +7,20 @@
   "scripts": {
     "start": "node index.js",
     "dev": "nodemon index.js",
-    "intsall-backend-dependencies":"npm i cors@2.8.5 express@4.19.2 mongodb@6.5.0 mongoose@8.2.4 nodemon@3.1.0 "
+    "intsall-backend-dependencies": "npm i cors@2.8.5 express@4.19.2 mongodb@6.5.0 mongoose@8.2.4 nodemon@3.1.0 "
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "express": "^4.19.2",
+    "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.5.0",
     "mongoose": "^8.2.4",
+    "nodemailer": "^6.9.13",
     "nodemon": "^3.1.0"
   }
 }
