--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -17,7 +17,8 @@
     "express": "^4.19.2",
     "mongoose": "^8.3.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.23.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
